ifupdown (0.6.4-5) unstable; urgency=low

  * The Gernot Heiser release -- aged like a fine South Australian wine.

  * Thanks to Michael Weber, Javier Fernandez-Sanguino Pena, Marc Haber, and
    Thomas Hood. (Closes: Bug#150773, Bug#151465, Bug#152893, Bug#208726,
    Bug#209006, Bug#242314, Bug#263913, Bug#266282, Bug#297762)

 -- Anthony Towns <aj@azure.humbug.org.au>  Wed, 23 Mar 2005 04:53:53 +1000

ifupdown (0.6.4-4.12) unstable; urgency=low

  * Non-maintainer upload
  * Begin description synopsis with lower case letter
  * postinst:
    + Create run dir at the target of /etc/network/run if it is absent
      (Closes: #297898)

 -- Thomas Hood <jdthood@yahoo.co.uk>  Thu,  3 Mar 2005 19:05:05 +0100

ifupdown (0.6.4-4.11) unstable; urgency=low

  * Non-maintainer upload
  * postinst:
    + Do not make /etc/network/run a symlink to /dev/shm/network/
      if devfs is in use.  (Closes: #266479)
  * /etc/init.d/ifupdown:
    + Don't accept arguments to "start" method
    + Fix initscript output
  * ifup.8:
    + Correct typo (Closes: #287172)
  * interfaces.5:
    + Correct description of what happens when user commands fail
      (Closes: #286166)
    + Remove reference to VERBOSE which isn't implemented in this
      version  (Reported in #88946)
  * Add it.po thanks to Luca Monducci  (Closes: #284123)

 -- Thomas Hood <jdthood@yahoo.co.uk>  Sun, 12 Sep 2004 14:46:29 +0200

ifupdown (0.6.4-4.10) unstable; urgency=low

  * Non-maintainer upload. Fix critical bugs.
  * fix ifstate cleaning in init script. (Closes: #264134).
  * fix /etc/network/run creation in postinst (Closes: #265165).

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Tue, 17 Aug 2004 06:38:16 +0200

ifupdown (0.6.4-4.9) unstable; urgency=low

  * Non-maintainer upload: bug fixes and some improvements, unfortunately
    they will not make it to sarge...
   [Javier Fernandez-Sanguino]
    - Added a generic --exclude option (modified ifupdown.nw and ifup.8)